--- a/config.json
+++ b/config.json
@@ -1,1 +1,88 @@
-[]
+[
+    {
+        "site": "DreamCamVR",
+        "username": "Evangelyne__",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Jess_lui",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "jazzparker",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Katrin_Honey",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LizaRoxx",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "_Alison__",
+        "running": true
+    },
+    {
+        "site": "StripChatVR",
+        "username": "_Katie_Dierse",
+        "running": true,
+        "room_id": "166556995"
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AnjaAmelia",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AnnLevine",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "askaudrey_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "chloe_dreammm",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "HoneyLace",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "J_Hunter_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LoonaEclipse",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Lunapage",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "milly_shy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Limy_Sweet",
+        "running": true
+    }
+]
