--- a/config.json
+++ b/config.json
@@ -30,12 +30,6 @@
         "running": true
     },
     {
-        "site": "StripChatVR",
-        "username": "_Katie_Dierse",
-        "running": true,
-        "room_id": "166556995"
-    },
-    {
         "site": "DreamCamVR",
         "username": "AnjaAmelia",
         "running": true
@@ -83,6 +77,706 @@
     {
         "site": "DreamCamVR",
         "username": "Limy_Sweet",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MiaX",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Spark_of_joy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AudreyBrookss",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "FiaMoor",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "GingerPink",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Mary_Lane",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Astra",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AvaFlower",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "best_alice",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "freckle_diyana",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "FoxyRayy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "GraceSecrettt",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "kamila_blush",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LeelooYolo",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "PollyMayer",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MollyParker",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Lilith",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "VR_PORNSTAR_SHOW",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "enchanted_bella",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "JanettaGrey",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Oscar_Beatrice",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "XXMILE",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "error_occurred_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "glowwww_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MollyBaby",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Summer_Red_Daze",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "CarolinaWinter",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "CassieCool",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "ethan_and_ava",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Kira_Moon",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AftonChappel",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "SweetKittyPlay",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MiaBanger",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LiluDallass",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "CharlotteWells",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "EmmaBrewn",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Evafolver",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Evangelyne_1",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "JennyyLuv",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MilkMeSofly",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "sensualkattt",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Sexy_Ira",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "VortexProject",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Wanda_Wild",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "ChaosDoll__",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "GwenAir",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Lili_Lohan",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "_BellaClark",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "_EmillyBronte",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "flow_within",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "FrostLuna",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "HeatherSweet_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LilElfie",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LounaNight",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MeganMour",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MiraBliss",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "PamelaXX_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "SaraiAngel",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Yes_Angel",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "ScarletHarley",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "VitoriaCarusso",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Yenlo",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "CelineHeaven",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "GiaEasyIce",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LureOfEva",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Anny_Limis",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "lucyloy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "CaitlinSugar",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Dear_Morgan",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "slow_flower",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Emilly_Hart",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "evasaff",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LiliBanger",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Mandi4pole",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MayWinss",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "PinkHell222",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Skinny_Alice",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "venomeowww_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AlannaRussell",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Annie22love",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "ava_blue",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "honey_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "lexy_exe",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Lindax",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Samyscott",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AngelAnabelle",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Helena_Amour",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "KianaWhite",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Mia_G_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "DiscoPotato",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Liza_lazy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LucyPaige",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "_AnnaStark_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "_Monica_B",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "dakotaa__",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "FapClubFamm",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "GinaSpicey",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LollyMi",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Love_Lines",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Little__Dream",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AnnaOneSix",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "JessicaElowin",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Kitty_steell",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LuxRaen",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "HloeChic",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "NoraCollins",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "SusieMorris",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "KailiBloom",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "SeaCyra",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Girls_Fingers",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "sasha__meow",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Mia_Evelyn",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "CuteeFoxy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Doublepleasure69",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "amelia_meili",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "JaneRayan",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LolySun",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "JosieLili",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Janet",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AsyaLumi",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "LizaSweettt",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Mary",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "PrettyLadies",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "carolriveraa_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "hi_evie",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MagicLilu",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "xannybunny_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "MaryTon",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Naila_Whisper",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Nicoll_Cherry",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "VioletAsh",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Stacy_River",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AprilFarrowy",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "BellaSpark_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Sirena",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "ShiroHeby",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "forestfa1ry",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Tina_Tayllor_",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "AileenKiss",
+        "running": true
+    },
+    {
+        "site": "DreamCamVR",
+        "username": "Fire_lunaa",
         "running": true
     }
 ]
